renaming of api fields and cleanup of filters (#35)
